AC_INIT(src/gfx.c)

PACKAGE=DirectPong
VERSION=0.2

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_CANONICAL_HOST

AC_PROG_CC
AM_PROG_CC_STDC

AM_PROG_LIBTOOL

changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],
if eval "test x$enable_debug = xyes"; then
  DEBUGFLAG="-g"
fi)

#
# Check for DirectFB
#
PKG_CHECK_MODULES(DIRECTFB, directfb >= 0.9.10)

DATADIR=$datadir
AC_SUBST(DATADIR)

AC_SUBST(PACAKGE)
AC_SUBST(VERSION)

AC_OUTPUT([
Makefile
data/Makefile
src/Makefile
])


