AC_INIT(src/main.c)
# Save this value here, since automake will set cflags later
cflags_set=${CFLAGS+set}

PACKAGE=blccc
VERSION=0.5

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_CANONICAL_HOST

AC_PROG_CC
AM_PROG_CC_STDC

changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],
if eval "test x$enable_debug = xyes"; then
  DEBUGFLAG="-g"
fi)

AM_PATH_GTK(1.2.8,
  with_gui=yes,
  with_gui=no
  AC_MSG_WARN([GTK+ not available -- only command-line utilities will be built.])
)

AM_CONDITIONAL(WITH_GUI, test x$with_gui = xyes)

DATADIR=$datadir
AC_SUBST(DATADIR)

AC_SUBST(PACAKGE)
AC_SUBST(VERSION)

AC_OUTPUT([
Makefile
examples/Makefile
src/Makefile
tools/Makefile
])


