AC_INIT(src/blccc.c)

PACKAGE=blccc
VERSION=1.999

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_PROG_CC
AC_PROG_LIBTOOL
AM_PROG_CC_STDC

changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],
if eval "test x$enable_debug = xyes"; then
  DEBUGFLAG="-g"
fi)

AM_PATH_GLIB_2_0(2.0.0, , , gobject gthread)

PKG_CHECK_MODULES(BLIB, blib >= 1.1.0)

DATADIR=$datadir/blccc
AC_SUBST(DATADIR)

AC_SUBST(PACAKGE)
AC_SUBST(VERSION)

AC_OUTPUT([
Makefile
data/Makefile
examples/Makefile
examples/on-demand/Makefile
examples/movies/Makefile
src/Makefile
src/modules/Makefile
stylesheets/Makefile
stylesheets/examples/Makefile
doc/Makefile
doc/blccc.1
])
