bin_PROGRAMS = windowmatrixd allon

windowmatrixd_SOURCES = 	\
	bl_protocol.h		\
	config.h		\
	main.c			\
	network.c 		\
	network.h		\
	devices.h		\
	log.h           	\
	table.h         	\
	devices.c		\
	log.c

allon_SOURCES =			\
	allon.c			\
	bl_protocol.h		\
	config.h		\
	network.h

EXTRA_DIST =			\
	INSTALL.generic 	\
	autogen.sh		\
	bmc_pio/MakeDev.sh	\
	bmc_pio/Makefile	\
	bmc_pio/README		\
	bmc_pio/bmc_pio.c	\
	bmc_pio/bmc_pio.h
