## Makefile.am for DirectPong/src

INCLUDES = @DIRECTFB_CFLAGS@

LDADD = @DIRECTFB_LIBS@

AM_CPPFLAGS = -DDATADIR=\"@DATADIR@/@PACKAGE@/\"

bin_PROGRAMS = dpong

dpong_SOURCES = \
	fonts.h		\
	fonts.c		\
	gfx.h		\
	gfx.c		\
	gfx-house.h	\
	gfx-house.c	\
	gfx-simple.h	\
	gfx-simple.c	\
	main.c		\
	utils.h
