## Makefile.am for blinkenthemes/themes
## Process this file with automake to produce Makefile.in

SUBDIRS = images

themesdatadir = $(BLIB_THEMEPATH)

themesdata_DATA = \
	bnf-160x120.xml		\
	bnf-320x240.xml		\
	bnf-640x480.xml		\
	bnf-800x600.xml		\
	bnf-1024x768.xml	\
	\
	bnf-320x240-jng.xml	\
	bnf-640x480-jng.xml	\
	\
	gondwana-640x120.xml	\
	\
	hdl-144x108.xml		\
	hdl-320x240.xml		\
	hdl-640x480.xml		\
	hdl-800x600.xml		\
	hdl-1024x768.xml	\
	\
	hdl-320x240-jng.xml	\
	hdl-640x480-jng.xml	\
	\
	hdl2-128x96.xml		\
	hdl2-160x120.xml	\
	hdl2-320x240.xml	\
	hdl2-640x480.xml	\
	hdl2-800x600.xml	\
	hdl2-1024x768.xml	\
	\
	hdl2-320x240-jng.xml	\
	hdl2-640x480-jng.xml	\
	\
	leds-166x110.xml

EXTRA_DIST = $(themesdata_DATA)
